--- a/svg/korg/ms-20_mini/normal_setting.html
+++ b/svg/korg/ms-20_mini/normal_setting.html
@@ -1,7 +1,29 @@
 <html>
-    <div>
-        <svg width="960" height="320">
-            
+    <div style="padding:10px;">
+        <svg width="940px" height="313px">
+            <!-- bounding border -->
+            <rect x="0px" y="0px" width="940px" height="313px" style="stroke:black; fill:none;" />
+
+            <!-- vertical lines -->
+            <line x1="81px" y1="8px" x2="81px" y2="226px" style="stroke:black; stroke-width:2px;"/>
+            <line x1="81px" y1="234px" x2="81px" y2="305px" style="stroke:black; stroke-width:2px;"/>
+
+            <line x1="153px" y1="8px" x2="153px" y2="171px" style="stroke:black; stroke-width:2px;"/>
+            <line x1="153px" y1="175px" x2="153px" y2="305px" style="stroke:black; stroke-width:3px;"/>
+
+            <line x1="218px" y1="8px" x2="218px" y2="171px" style="stroke:black; stroke-width:2px;"/>
+            <line x1="218px" y1="179px" x2="218px" y2="305px" style="stroke:black; stroke-width:2px;"/>
+
+            <line x1="284px" y1="8px" x2="284px" y2="171px" style="stroke:black; stroke-width:2px;"/>
+            <line x1="284px" y1="179px" x2="284px" y2="305px" style="stroke:black; stroke-width:2px;"/>
+
+            <line x1="349px" y1="8px" x2="349px" y2="115px" style="stroke:black; stroke-width:2px;"/>
+            <line x1="349px" y1="119px" x2="349px" y2="175px" style="stroke:black; stroke-width:3px;"/>
+            <line x1="349px" y1="179px" x2="349px" y2="305px" style="stroke:black; stroke-width:2px;"/>
+
+            <line x1="414px" y1="123px" x2="414px" y2="305px" style="stroke:black; stroke-width:2px;"/>
+
+
         </svg>
     </div>
 </html>
